--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ p {
 <body>
 <center><font color="Green"><font size="24">My Life</font></center>
 <center>My name is Dipankar Jain but most people call me Deep.<p></center>
-<center>I am a Junior at BRHS.<p></center>
+<center>I an incoming Junior at Virginia Tech.<p></center>
 <center>I have a special interest in computers and anything that has to do with tech.<p></center>
 <center> I am on the Bridgewater Raritan Highschool Robotics team where I work with the Mechanical and Strategy Subvision to develop a game wining robot.<p></center>
 <center>Here is a picture of last year's robot...<p></center>
@@ -20,14 +20,4 @@ p {
 <center><a href="http://team303.com/">CLICK HERE!!!</a></center>
 <center>If you want see a video about us...see below<p></center>
 <center><iframe width="640" height="390" src="https://www.youtube.com/embed/6lu_WeM54G0" frameborder="0" allowfullscreen></iframe></center>
-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------<p>
-<center><font size="24">My Family</font></center>
-<center>So my family consists of my Mom, Dad and my little Brother. <p></center>
-<center>Here is a picture of my family and me.<p></center>
-<center><img src="FamilyPic.JPG" alt="HTML5 Icon" width="400" height="300"><p></center>
-<center>Rest of the family is in India and here is a picture of them<p></center>
-<center><img src="IndiaFamily.JPG" alt="HTML5 Icon" width="400" height="300"><p></center>
-<center><body bgcolor="#FFFF66"></center><p>
-<center><font size="24">Thanks for looking at my life!!!</font></center>
-</Body>
-</html>
+
