--- a/index.html
+++ b/index.html
@@ -1,12 +1,7 @@
 <HTML>
 <HEAD>
-<style>
-p {
-    border: 5px solid red;
-}
-</style>
 </head>
 <body>
-<center><font color="Green"><font size="24">My Life</font></center>
+<center><font color="Black"><font size="24">My Life</font></center>
 <center>My name is Dipankar Jain but most people call me Deep.<p></center>
-<center>I an incoming Junior at Virginia Tech.<p></center>
+<center>I am Computer Engineering Student at Virginia Tech.<p></center>
