--- a/index.html
+++ b/index.html
@@ -1,7 +1,22 @@
-<HTML>
-<HEAD>
-</head>
-<body>
-<center><font color="Black"><font size="24">My Life</font></center>
-<center>My name is Dipankar Jain but most people call me Deep.<p></center>
-<center>I am Computer Engineering Student at Virginia Tech.<p></center>
+<!-- Tab links -->
+<div class="tab">
+  <button class="tablinks" onclick="openCity(event, 'London')">London</button>
+  <button class="tablinks" onclick="openCity(event, 'Paris')">Paris</button>
+  <button class="tablinks" onclick="openCity(event, 'Tokyo')">Tokyo</button>
+</div>
+
+<!-- Tab content -->
+<div id="London" class="tabcontent">
+  <h3>London</h3>
+  <p>London is the capital city of England.</p>
+</div>
+
+<div id="Paris" class="tabcontent">
+  <h3>Paris</h3>
+  <p>Paris is the capital of France.</p>
+</div>
+
+<div id="Tokyo" class="tabcontent">
+  <h3>Tokyo</h3>
+  <p>Tokyo is the capital of Japan.</p>
+</div>
