--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <!-- Tab links -->
 <div class="tab">
-  <button class="tablinks" onclick="openCity(event, 'London')">London</button>
-  <button class="tablinks" onclick="openCity(event, 'Paris')">Paris</button>
-  <button class="tablinks" onclick="openCity(event, 'Tokyo')">Tokyo</button>
+  <button class="tablinks" onclick="openCity(event, 'London')">About Dipankar Jain</button>
+  <button class="tablinks" onclick="openCity(event, 'Paris')">Research</button>
+  <button class="tablinks" onclick="openCity(event, 'Tokyo')">Experence</button>
 </div>
 
 <!-- Tab content -->
-<div id="London" class="tabcontent">
-  <h3>London</h3>
-  <p>London is the capital city of England.</p>
+<div id="Dipankar Jain" class="tabcontent">
+  <h3> About Dipankar Jain</h3>
+  <p>Add Comments here</p>
 </div>
 
-<div id="Paris" class="tabcontent">
-  <h3>Paris</h3>
-  <p>Paris is the capital of France.</p>
+<div id="Research" class="tabcontent">
+  <h3>Research Expertise</h3>
+  <p>Details</p>
 </div>
 
-<div id="Tokyo" class="tabcontent">
-  <h3>Tokyo</h3>
-  <p>Tokyo is the capital of Japan.</p>
+<div id="Experence" class="tabcontent">
+  <h3>Experence</h3>
+  <p>Experence</p>
 </div>
