--- a/index.html
+++ b/index.html
@@ -1,22 +1,24 @@
-<!-- Tab links -->
-<div class="tab">
-  <button class="tablinks" onclick="openCity(event, 'London')">About Dipankar Jain</button>
-  <button class="tablinks" onclick="openCity(event, 'Paris')">Research</button>
-  <button class="tablinks" onclick="openCity(event, 'Tokyo')">Experence</button>
+<button class="tablink" onclick="openPage('Home', this, 'red')">Home</button>
+<button class="tablink" onclick="openPage('News', this, 'green')" id="defaultOpen">Experence and Research</button>
+<button class="tablink" onclick="openPage('Contact', this, 'blue')">Contact</button>
+<button class="tablink" onclick="openPage('About', this, 'orange')">About</button>
+
+<div id="Home" class="tabcontent">
+  <h3>Home</h3>
+  <p>Comments.</p>
 </div>
 
-<!-- Tab content -->
-<div id="Dipankar Jain" class="tabcontent">
-  <h3> About Dipankar Jain</h3>
-  <p>Add Comments here</p>
+<div id="News" class="tabcontent">
+  <h3>NeExperence and Researchws</h3>
+  <p>Comments</p>
 </div>
 
-<div id="Research" class="tabcontent">
-  <h3>Research Expertise</h3>
-  <p>Details</p>
+<div id="Contact" class="tabcontent">
+  <h3>Contact</h3>
+  <p>Get in touch, or swing by for a cup of coffee.</p>
 </div>
 
-<div id="Experence" class="tabcontent">
-  <h3>Experence</h3>
-  <p>Experence</p>
+<div id="About" class="tabcontent">
+  <h3>About</h3>
+  <p>Who we are and what we do.</p>
 </div>
