--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </div>
 
 <div id="News" class="tabcontent">
-  <h3>NeExperence and Researchws</h3>
+  <h3>Experence and Researchws</h3>
   <p>Comments</p>
 </div>
 
