--- a/index.html
+++ b/index.html
@@ -1,16 +1,23 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <link rel="stylesheet" href="config.css">
+</head>
+<body>
+
 <button class="tablink" onclick="openPage('Home', this, 'red')">Home</button>
-<button class="tablink" onclick="openPage('News', this, 'green')" id="defaultOpen">Experence and Research</button>
-<button class="tablink" onclick="openPage('Contact', this, 'blue')">Contact</button>
-<button class="tablink" onclick="openPage('About', this, 'orange')">About</button>
+<button class="tablink" onclick="openPage('News', this, 'green')" id="defaultOpen">Experence</button>
+<button class="tablink" onclick="openPage('Contact', this, 'blue')">Research</button>
+<button class="tablink" onclick="openPage('About', this, 'orange')">Contact</button>
 
 <div id="Home" class="tabcontent">
   <h3>Home</h3>
-  <p>Comments.</p>
+  <p>Home is where the heart is..</p>
 </div>
 
 <div id="News" class="tabcontent">
-  <h3>Experence and Researchws</h3>
-  <p>Comments</p>
+  <h3>News</h3>
+  <p>Some news this fine day!</p>
 </div>
 
 <div id="Contact" class="tabcontent">
@@ -22,3 +29,6 @@
   <h3>About</h3>
   <p>Who we are and what we do.</p>
 </div>
+
+</body>
+</html>
