Updated Descriptions Preview

--- a/index.html
+++ b/index.html
@@ -12,23 +12,19 @@
 <button class="tablink" onclick="openPage('About', this, 'orange')">Contact</button>
 
 <div id="Home" class="tabcontent">
-  <h3>Home</h3>
-  <p>Home is where the heart is..</p>
+  <p>This an intoduction, about me</p>
 </div>
 
 <div id="News" class="tabcontent">
-  <h3>News</h3>
-  <p>Some news this fine day!</p>
+  <p>Experences</p>
 </div>
 
 <div id="Contact" class="tabcontent">
-  <h3>Contact</h3>
-  <p>Get in touch, or swing by for a cup of coffee.</p>
+  <p>Research Materials</p>
 </div>
 
 <div id="About" class="tabcontent">
-  <h3>About</h3>
-  <p>Who we are and what we do.</p>
+  <p>My contact info uploaded here</p>
 </div>
 
 </body>
