--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
   <link rel="stylesheet" href="config.css">
   <script src="tablink.js"></script>
+  <body bgcolor="#3661a5">
 </head>
 <body>
 
-<button class="tablink" onclick="openPage('Home', this, 'red')">Home</button>
-<button class="tablink" onclick="openPage('News', this, 'green')" id="defaultOpen">Experence</button>
-<button class="tablink" onclick="openPage('Contact', this, 'blue')">Research</button>
-<button class="tablink" onclick="openPage('About', this, 'orange')">Contact</button>
+<button class="tablink" onclick="openPage('Home', this, 'grey')">Home</button>
+<button class="tablink" onclick="openPage('News', this, 'grey')" id="defaultOpen">Experence</button>
+<button class="tablink" onclick="openPage('Contact', this, 'grey')">Research</button>
+<button class="tablink" onclick="openPage('About', this, 'grey')">Contact</button>
 
 <div id="Home" class="tabcontent">
   <p>This an intoduction, about me</p>
