--- a/index.html
+++ b/index.html
@@ -13,7 +13,15 @@
 <button class="tablink" onclick="openPage('About', this, 'grey')">Contact</button>
 
 <div id="Home" class="tabcontent">
-  <p>This an intoduction, about me</p>
+  <p>My name is Dipankar Jain, and I am currently a Junior Computer Engineering Student at Virginia Tech.
+  <br>Though out my collegiate career, I have learned many things that has helped me become who I am today.
+  <br>Starting my freshmen year, I was offered a leadership position in a rocketry design team that has helped
+  <br>me learn how to effectively delegate and communicate with a group of freshmen engineers effectively.
+  <br>I applied this newly gained knowledge well into my sophomore year when I joined my first official research
+  <br>team. At Terrestrial Robotics Engineering and Controls Lab (TREC), I learned to communicate with graduate
+  <br>level students and professors effectively that helped me learn many new tools being developed within the lab.
+  <br>As a result, I worked directly under a professor and we solved various problems in collision control and error
+  <br>detection.
 </div>
 
 <div id="News" class="tabcontent">
