--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <button class="tablink" onclick="openPage('Contact', this, 'grey')">Research</button>
 <button class="tablink" onclick="openPage('About', this, 'grey')">Contact</button>
 
-<div id="Home" class="tabcontent">
-  <p>My name is Dipankar Jain, and I am currently a Junior Computer Engineering Student at Virginia Tech.
+<div id="Home" class="tabcontent" style="display:block">
+  <p>My name is Dipankar Jain, and I am currently a Junior in Computer Engineering at Virginia Tech.
   <br>Though out my collegiate career, I have learned many things that has helped me become who I am today.
   <br>Starting my freshmen year, I was offered a leadership position in a rocketry design team that has helped
   <br>me learn how to effectively delegate and communicate with a group of freshmen engineers effectively.
@@ -22,6 +22,13 @@
   <br>level students and professors effectively that helped me learn many new tools being developed within the lab.
   <br>As a result, I worked directly under a professor and we solved various problems in collision control and error
   <br>detection.
+  <p>
+  <br>More about me, I like to think myself as a gregarious human being. I enjoy going out of my way to meet new people
+  <br>and learn more about them.  I feel that it helps me become a better person every time; as a result, that is why
+  <br>chose an engineering major.  I enjoy working together with other people and I knew that becoming part of a team
+  <br>will not only help me improve my analytical skills but will also teach me how to comprise and cover up other people’s
+  <br>weaknesses. 
+
 </div>
 
 <div id="News" class="tabcontent">
