--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
   <br>and learn more about them.  I feel that it helps me become a better person every time; as a result, that is why
   <br>chose an engineering major.  I enjoy working together with other people and I knew that becoming part of a team
   <br>will not only help me improve my analytical skills but will also teach me how to comprise and cover up other people’s
-  <br>weaknesses. 
+  <br>weaknesses.
+  <p>
+  <br>Because of my current standing and beliefs, I believe I feel that I am well prepared to be
 
 </div>
 
