--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
   <br>will not only help me improve my analytical skills but will also teach me how to comprise and cover up other people’s
   <br>weaknesses.
   <p>
-  <br>Because of my current standing and beliefs, I believe I feel that I am well prepared to be
+  <br>Because of my current standing and beliefs, I believe I feel that I am prepared to take on any challenge. If you have
+  <br>any questions about me or this website please feel free to contact me.
 
 </div>
 
