--- a/index.html
+++ b/index.html
@@ -23,14 +23,18 @@
   <br>As a result, I worked directly under a professor and we solved various problems in collision control and error
   <br>detection.
   <p>
-  <br>More about me, I like to think myself as a gregarious human being. I enjoy going out of my way to meet new people
-  <br>and learn more about them.  I feel that it helps me become a better person every time; as a result, that is why
-  <br>chose an engineering major.  I enjoy working together with other people and I knew that becoming part of a team
-  <br>will not only help me improve my analytical skills but will also teach me how to comprise and cover up other people’s
-  <br>weaknesses.
+  <br>More about me, I like to think myself as a gregarious human being. I enjoy going out of my way to meet new
+  <br>people and learn more about them.  I feel that it helps me become a better person every time; as a result,
+  <br>that is why chose an engineering major.  I enjoy working together with other people and I knew that becoming
+  <br>part of a team will not only help me improve my analytical skills but will also teach me how to comprise and
+  <br>cover up other people’s weaknesses.
   <p>
-  <br>Because of my current standing and beliefs, I believe I feel that I am prepared to take on any challenge. If you have
-  <br>any questions about me or this website please feel free to contact me.
+  <br>Because of my current standing and beliefs, I believe I feel that I am prepared to take on any challenge. If
+  <br>you have any questions about me or this website please feel free to contact me.
+
+  <a href ="https://github.com/jdeep97" target="_blank"
+  <div id="OverviewText4">
+  </div>
 
 </div>
 
