--- a/index.html
+++ b/index.html
@@ -13,25 +13,7 @@
 <button class="tablink" onclick="openPage('About', this, 'grey')">Contact</button>
 
 <div id="Home" class="tabcontent" style="display:block">
-  <p>My name is Dipankar Jain, and I am currently a Junior in Computer Engineering at Virginia Tech.
-  <br>Though out my collegiate career, I have learned many things that has helped me become who I am today.
-  <br>Starting my freshmen year, I was offered a leadership position in a rocketry design team that has helped
-  <br>me learn how to effectively delegate and communicate with a group of freshmen engineers effectively.
-  <br>I applied this newly gained knowledge well into my sophomore year when I joined my first official research
-  <br>team. At Terrestrial Robotics Engineering and Controls Lab (TREC), I learned to communicate with graduate
-  <br>level students and professors effectively that helped me learn many new tools being developed within the lab.
-  <br>As a result, I worked directly under a professor and we solved various problems in collision control and error
-  <br>detection.
-  <p>
-  <br>More about me, I like to think myself as a gregarious human being. I enjoy going out of my way to meet new
-  <br>people and learn more about them.  I feel that it helps me become a better person every time; as a result,
-  <br>that is why chose an engineering major.  I enjoy working together with other people and I knew that becoming
-  <br>part of a team will not only help me improve my analytical skills but will also teach me how to comprise and
-  <br>cover up other people’s weaknesses.
-  <p>
-  <br>Because of my current standing and beliefs, I believe I feel that I am prepared to take on any challenge. If
-  <br>you have any questions about me or this website please feel free to contact me.
-
+  <p>My name is Deep Jain, and I am student in Computer Science at NJIT.
   <a href ="https://github.com/jdeep97" target="_blank"
   <div id="OverviewText4">
   </div>
