--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-Hello 
+<!DOCTYPE html>
+<head>
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+    <link rel="stylesheet" href="design.css">
+</head>
+<html>
+    <title>Dipankar Jain</title>
+    <div class = "intro">
+        <div class="set">
+            <img src="static/Picture.png" alt = "Dipankar Jain">
+        </div>
+        <div class="set">
+            <h1>Programmar</h1>
+            <h1>Data Analyst</h1>
+            <h1>Problem Solver</h1>
+        </div>
+        
+    </div>
+    
+</html>
