--- a/index.html
+++ b/index.html
@@ -1,20 +1,27 @@
 <!DOCTYPE html>
 <head>
-    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+    <title>Dipankar Jain</title>
     <link rel="stylesheet" href="design.css">
 </head>
 <html>
-    <title>Dipankar Jain</title>
-    <div class = "intro">
-        <div class="set">
-            <img src="static/Picture.png" alt = "Dipankar Jain">
+    <body>
+        <div class="deepName">Dipankar Jain</div>
+        <div class = "intro">
+            <div class="set">
+                <img src="static/Picture.png" alt = "Dipankar Jain">
+            </div>
+                <div class="container">
+                    <span class="text1">
+                        Programmar
+                    </span>
+                    <span class="text2">
+                        Data Analyst
+                    </span>
+                    <span class="text3">
+                        Problem Solver
+                    </span>
+                </div>
         </div>
-        <div class="set">
-            <h1>Programmar</h1>
-            <h1>Data Analyst</h1>
-            <h1>Problem Solver</h1>
-        </div>
-        
-    </div>
+    </body>
     
 </html>
