Update Copyright date

--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
                         </div>
                     </div>
             </div>
-            <p>© Dipankar Jain</p>
+            <p>© Dipankar Jain 2021</p>
         </body>
 </html>
