--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
         <title>Dipankar Jain</title>
         <link rel="stylesheet" href="design.css">
     </head>
 
         <body>
+            
             <div class="deepName">Dipankar Jain</div>
             <div class = "intro">
                 <div class="mainPic"><img src="static/Picture.png" alt = "Dipankar Jain"></div>
@@ -25,6 +27,6 @@
                         </div>
                     </div>
             </div>
-            <p>© Dipankar Jain 2021</p>
+            <p>© Dipankar Jain</p>
         </body>
 </html>
