Fix HTML structure and update image alt text

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <h1 class="question">Rashi, will you be my valentine?<3</h1>
-    <img src="../assets/heart.gif" alt="" width="300px" height="300px" class="giffy">
+    <img src="../assets/heart.gif" alt="heart animation" class="giffy">
     <div class="buttons">
         <button class="button yes" onclick="yes()">Yes</button>
         <button class="button no" onclick="no()">No</button>
@@ -21,5 +21,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
