Refactor index.html for better readability
Updated the HTML structure and improved the text.

--- a/index.html
+++ b/index.html
@@ -11,16 +11,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 class="question">Rashi, will you be my valentine?<3</h1>
+    <h1 class="question">Rashi, will you be my valentine?</h1>
     <img src="../assets/heart.gif" alt="heart animation" class="giffy">
     <div class="buttons">
         <button class="button yes" onclick="yes()">Yes</button>
         <button class="button no" onclick="no()">No</button>
     </div>
-    <h1 class="text">I love you</h1>
+    <h1 class="text">I love you! <3</h1>
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
